--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -9,3 +9,9 @@
     font-weight: 600;
     src: url("../fonts/Poppins/Poppins-SemiBold.ttf");
 }
+
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 700;
+    src: url("../fonts/Poppins/Poppins-Bold.ttf");
+}
