--- a/assets/styles/reset-styles.css
+++ b/assets/styles/reset-styles.css
@@ -1,47 +1,88 @@
-/* 1. Use a more-intuitive box-sizing model */
-*, *::before, *::after {
+/* Reset and base styles  */
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-/* 2. Remove default margin */
-* {
-    margin: 0;
+/* Links */
+
+a, a:link, a:visited  {
+    text-decoration: none;
 }
 
-body {
-    /* 3. Add accessible line-height */
-    line-height: 1.5;
-    /* 4. Improve text rendering */
-    -webkit-font-smoothing: antialiased;
+a:hover  {
+    text-decoration: none;
 }
 
-/* 5. Improve media defaults */
-img, picture, video, canvas, svg {
+/* Common */
+
+aside, nav, footer, header, section, main {
     display: block;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+ul, ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+img, svg {
     max-width: 100%;
+    height: auto;
 }
 
-/* 6. Inherit fonts for form controls */
-input, button, textarea, select {
-    font: inherit;
+address {
+    font-style: normal;
 }
 
-/* 7. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
+/* Form */
+
+input, textarea, button, select {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: transparent;
 }
 
-/* 8. Improve line wrapping */
-p {
-    text-wrap: pretty;
-}
-h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
+input::-ms-clear {
+    display: none;
 }
 
-/*
-  9. Create a root stacking context
-*/
-#root, #__next {
-    isolation: isolate;
+button, input[type="submit"] {
+    display: inline-block;
+    box-shadow: none;
+    background: transparent none;
+    cursor: pointer;
+}
+
+input:focus, input:active,
+button:focus, button:active {
+    outline: none;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+label {
+    cursor: pointer;
+}
+
+legend {
+    display: block;
 }
