--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,6 +3,7 @@
     width: 1440px;
     height: 1070px;
     padding: 32px;
+    font-family: Poppins, sans-serif;
 }
 
 .first-screen {
@@ -10,7 +11,6 @@
 }
 
 .first-screen__title {
-    font-family: Poppins, sans-serif;
     font-weight: 700;
     color: #271908;
     font-size: 112px;
@@ -18,7 +18,6 @@
 }
 
 .first-screen__text {
-    font-family: Poppins, sans-serif;
     font-weight: 400;
     font-size: 24px;
     line-height: 36px;
@@ -32,7 +31,6 @@
     padding: 24px 37px;
     background-color: #271908;
 
-    font-family: Poppins, sans-serif;
     font-weight: 400;
     line-height: 18px;
     font-size: 18px;
@@ -42,10 +40,8 @@
 .statistic-cards {
     display: flex;
     flex-direction: row;
-}
-
-.statistic-cards__statistic-card {
-    margin: 16px;
+    justify-content: space-between;
+    width: 1310px;
 }
 
 .statistic-card {
@@ -60,7 +56,6 @@
     width: 216px;
     height: 133px;
     margin: 31px 29px;
-    font-family: Poppins, sans-serif;
     color: #252525;
 }
 
@@ -71,14 +66,12 @@
 }
 
 .statistic-card__metric {
-    font-family: inherit;
     line-height: 36px;
     font-size: 40px;
     font-weight: 600;
 }
 
 .statistic-card__text {
-    font-family: inherit;
     font-size: 18px;
     line-height: 27px;
     font-weight: 400;
