--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,12 +2,82 @@
     background-color: #E8D9D6;
     width: 1440px;
     height: 1070px;
-    padding: 32px;
+    padding-left: 64px;
+    padding-bottom: 64px;
     font-family: Poppins, sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .first-screen {
+    display: flex;
+    flex-direction: row;
+}
 
+.image-area {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.first-screen__image_area {
+    position: relative;
+    top: 0;
+    right: -4px;
+}
+
+.image-area__left-wing {
+    z-index: 1;
+    width: 316px;
+    height: 317px;
+    position: absolute;
+    bottom: 180px;
+    left: 100px;
+}
+
+.image-area__right-wing {
+    z-index: 1;
+    width: 316px;
+    height: 317px;
+    position: absolute;
+    bottom: 180px;
+    right: 75px;
+}
+
+.image-area__bubble-tea-image {
+    z-index: 2;
+    position: absolute;
+    top: 37px;
+    right: 160px;
+}
+
+.image-area__leaf-image {
+    z-index: 3;
+    position: absolute;
+    top: 310px;
+    right: 288px;
+}
+
+.content-area {
+    width: 574px;
+    height: 333px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.first-screen__content-area {
+    margin-top: 45px;
+}
+
+.first-screen__tea-illustration {
+    width: 231px;
+    height: 292px;
+    z-index: 1;
+    position: relative;
+    margin-bottom: -63px;
 }
 
 .first-screen__title {
@@ -35,6 +105,8 @@
     line-height: 18px;
     font-size: 18px;
     color: #ffffff;
+
+    margin-top: 32px;
 }
 
 .statistic-cards {
